fix: styling on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -144,3 +144,29 @@ tr > td, tr > th {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+@media (max-width: 1280px) {
+  .nav-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #nav-mobile {
+    display: none;
+  }
+}
+@media (max-width: 1000px) {
+  .card-placer {
+    width: 50px;
+    height: 75px;
+  }
+
+  .btn-icon {
+    font-size: 8px;
+  }
+}
+@media (max-width: 600px) {
+  .brand-logo {
+    font-size: 10px !important;
+  }
+}
